<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>tier4_camera_sync_doctor</name>
  <version>0.0.0</version>
  <description>The tier4_camera_sync_doctor package</description>
  <maintainer email="manato.hirabayashi@tier4.jp">Manato Hirabayashi</maintainer>

  <license>Apache 2</license>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>

  <depend>builtin_interfaces</depend>
  <depend>diagnostic_updater</depend>
  <depend>diagnostic_msgs</depend>
  <depend>rcl_yaml_param_parser</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>rcutils</depend>
  <depend>sensor_msgs</depend>
  <!-- <depend>yaml-cpp</depend> -->

  <test_depend>ament_lint_auto</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
